# Imagura

./: .gitignore  LICENSE  README_EN.md  build.py  imagura2.py  pyproject.toml  readme.md
.github/workflows/: ci.yml
benchmarks/: bench_cpu.py  bench_gpu.py
docs/: QA_CHECKLIST.md  profiling.md
imagura/: ARCHITECTURE.md  HANDOFF.md  __init__.py  animation.py  app.py  app_icon.py  clipboard.py  commands.py  config.py  i18n.py  image_sorting.py  image_utils.py  input_handler.py  logging.py  math_utils.py  renderer.py  rl_compat.py  settings_persistence.py  transforms.py  types.py  user_config.py  user_settings.py  view_math.py  win_utils.py
imagura/gallery/: __init__.py  behavior.py  renderer.py
imagura/image_loading/: __init__.py  content_loader.py  current_and_neighbors.py
imagura/image_metadata/: __init__.py  exif_cache.py
imagura/platform/: __init__.py  file_deletion.py  file_dialog.py
imagura/playback/: __init__.py  animated_content.py
imagura/services/: __init__.py  animated_content_cache.py  large_texture_cache.py  loader.py  textures.py  thumbnails.py
imagura/state/: __init__.py  animation.py  app_state.py  gallery.py  images.py  input.py  loading.py  ui.py  view.py  window.py
imagura/ui/: __init__.py  context_menu.py  gallery_sort_control.py  settings_modal.py  text_overlays.py  toolbar.py
imagura/viewers/: __init__.py  base.py  gif_viewer.py  image_viewer.py  registry.py  webp_viewer.py
imagura/zoom/: __init__.py  manual_zoom.py  scale_overlay.py  toggle_zoom_animation.py  zoom_animation.py
installer/: imagura.spec  imagura_setup.iss  version_info.txt
packaging/windows/: README.md  imagura-win.spec  imagura.iss  make_icon.py  version_info.txt
tests/: __init__.py  test_config_validation.py  test_smoke.py  test_types.py  test_user_config.py
tools/: build_windows_exe.py  profile_content.py  profile_hotspots.py  run_smoke_tests.py  run_unittest_target.py
