[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "imagura"
version = "2.1.0"
description = "Fast async image viewer built with Python and raylib."
readme = "readme.md"
requires-python = ">=3.10"
dependencies = [
    "pillow>=10",
    "raylib>=5.0",
    "pywin32>=306; platform_system == 'Windows'",
]

[project.optional-dependencies]
exif = [
    "piexif>=1.1.3",
]
dev = []
windows-build = [
    "pyinstaller>=6",
]

[tool.setuptools.packages.find]
include = ["imagura*"]
