[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "imagura"
version = "2.1.0"
description = "Fast async image viewer built with Python and raylib."
readme = "readme.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Barmagloth" }]
dependencies = [
    "pillow>=10",
    "raylib>=5.0",
    "pywin32>=306; platform_system == 'Windows'",
]

[project.optional-dependencies]
exif = [
    "piexif>=1.1.3",
]
dev = []
windows-build = [
    "pyinstaller>=6",
]

[tool.setuptools.packages.find]
include = ["imagura*"]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
# Lint baseline for a mid-refactor codebase (see imagura/HANDOFF.md). The
# suppressed categories below are either intentional patterns or low-priority
# pre-existing debt, so CI gates on real regressions and the smoke-test suite
# rather than on legacy lint noise. Tightening this baseline is backlogged.
ignore = [
    "F401",  # unused imports: imagura2.py re-exports config into module globals,
             # a contract the smoke tests pin; package __init__ files re-export API.
    "F541",  # f-string without placeholders (cosmetic).
    "F841",  # assigned-but-unused locals (pre-existing).
    "E402",  # module-level import not at top: tooling/benchmark scripts set sys.path first.
    "E721",  # type(x) == T comparisons in settings validation (intentional).
]
